Fix no trailer ticket alert on mobile and add trailer criteria link

--- a/src/scenes/Moves/Ppm/PPMPaymentRequest.css
+++ b/src/scenes/Moves/Ppm/PPMPaymentRequest.css
@@ -122,6 +122,12 @@
   width: 50%;
 }
 
+@media only screen and (max-width: 481px) {
+  .one-half {
+    width: 100%;
+  }
+}
+
 .input-group .usa-input-error {
   margin-top: 0px;
 }
